refactor: Service 관련 클래스에 CustomException 적용하여 예외 처리